# cloud-compute-calculator

./: LICENSE  README.md  azure-currencies.json  calculator.py  mypy.ini  pyproject.toml
