[tool.poetry]
name = "cloud-compute-calculator"
version = "0.1.0"
description = "Estimate cloud compute costs"
authors = ["Tom Rochette <tom@tomrochette.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.5"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.782"
isort = "^4.3"
prospector = "^1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
